--- a/FirebaseTest.html
+++ b/FirebaseTest.html
@@ -115,7 +115,7 @@
       <div class="col-sm-offset-3 col-sm-6">
         <div class="panel panel-primary">
           <div class="panel-heading text-center">
-            <h3 class="panel-title"><strong><i class="fa" id="PlaylistName">Playlist Name</i></strong></h3>
+            <h3 class="panel-title"><strong><i class="fa" id="PlaylistName">No Playlist Name</i></strong></h3>
           </div>
            <div class="panel-body text-left" id="Playlist">
           </div>
