--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <!-- This row will handle all of the retrieved Data -->
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title text-center"><strong><i class="fa">Pick a Playlist</i></strong></h3>
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-8">
+      <div class="col-sm-9">
         <div class="panel panel-primary">
           <div class="panel-heading text-center">
             <h3 class="panel-title"><strong><i class="fa" id="PlaylistName"></i></strong></h3>
@@ -94,7 +94,7 @@
     <div class="row">
     <div class="panel panel-primary">
       <div class="panel-heading text-center">
-        <div style="font-size: 8px">© Copyright 2017 - Bob Imel II</div>
+        <div style="font-size: 8px">© Copyright 2017 - TLOE</div>
       </div>
     </div>
   </div>
