--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
               </select>
             </div>
             <div class="row">
-              <div class="col-sm-offset-2 col-sm-4">
+              <div class="col-sm-offset-1 col-sm-5">
                 <img id="addList" src="./assets/add.png" alt="Add New" style="width: 100%"></div>
-              <div class="col-sm-4">
+              <div class="col-sm-5">
                 <img id="delList" src="./assets/del.png" alt="Delete" style="width: 100%"></div>
             </div>
           </div>
@@ -80,11 +80,11 @@
             </div>
             <div class="row">
               <div class="col-sm-offset-3 col-sm-2">
-                <img id="addSong" src="./assets/add.png" alt="Add New" style="width: 100%"></div>
+                <img id="addSong" src="./assets/add.png" alt="Add New" style="width: 75%; padding-top: 2px"></div>
               <div class="col-sm-2">
-                <img id="plySong" src="./assets/ply.png" alt="Play" style="width: 100%"></div>
+                <img id="plySong" src="./assets/ply.png" alt="Play" style="width: 75%; padding-top: 2px"></div>
               <div class="col-sm-2">
-                <img id="delSong" src="./assets/del.png" alt="Delete" style="width: 100%"></div>
+                <img id="delSong" src="./assets/del.png" alt="Delete" style="width: 75%; padding-top: 2px"></div>
             </div>
           </div>
          </div>
